# smartPointerManipulations

./: CMakeLists.txt  coverage.sh  project-doxy.cfg  readme
apps/: allTests.cpp  atomicMultiThread.cpp  main.cpp
cmake/Modules/: CommitInfo.cmake  CommitInfo.in.tex  FileConfig.cmake  Listcmake-var.cmake  config.in.h  documentation.cmake  helpers.cmake
lib/: BaseObserver.cpp  BaseObserver.hpp  CMakeLists.txt  DerivedObserver.cpp  DerivedObserver.hpp  Foo.cpp  Foo.hpp  lib.doxycfg  my_ceil-lib.c  my_ceil-lib2.c  my_ceil.h
test/: CMakeLists.txt
